@@ -4,8 +4,10 @@ import fr.univcotedazur.isadevops.components.BookingHandler;
 import fr.univcotedazur.isadevops.dto.BookingDTO;
 import fr.univcotedazur.isadevops.entities.Booking;
 import fr.univcotedazur.isadevops.exceptions.ActivityIdNotFoundException;
-import fr.univcotedazur.isadevops.exceptions.AlreadyExistingActivityException;
-import fr.univcotedazur.isadevops.exceptions.AlreadyExistingBookingException;
+import fr.univcotedazur.isadevops.interfaces.BookingCreator;
+import fr.univcotedazur.isadevops.interfaces.BookingFinder;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import fr.univcotedazur.isadevops.exceptions.CustomerIdNotFoundException;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,26 +16,32 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/booking")
 public class BookingController {
-
-    private final BookingHandler bookingHandler;
+    private static final Logger LOG = LoggerFactory.getLogger(BookingController.class);
+    private final BookingCreator bookingCreator;
+    private final BookingFinder bookingFinder;
 
     @Autowired
-    public BookingController(BookingHandler bookingHandler) {
-        this.bookingHandler = bookingHandler;
+    public BookingController(BookingCreator bookingCreator, BookingFinder bookingFinder) {
+        this.bookingCreator = bookingCreator;
+        this.bookingFinder = bookingFinder;
     }
 
     @PostMapping
     public ResponseEntity<Object> createBooking(@RequestBody @Valid BookingDTO bookingDTO) {
-        System.out.println("Creation of a booking for customer " + bookingDTO.customerId() + " and activity " + bookingDTO.activityId());
+        LOG.info("Creation of a booking for customer {} and activity {}", bookingDTO.customerId(), bookingDTO.activityId());
         try {
-            Booking booking = bookingHandler.createBooking(bookingDTO.customerId(), bookingDTO.activityId());
-            return ResponseEntity.status(HttpStatus.CREATED)
-                    .body(convertToDTO(booking));
+            Booking booking = bookingCreator.createBooking(bookingDTO.customerId(), bookingDTO.activityId(), bookingDTO.usePoints());
+            if(booking == null){
+                return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                        .body("Activity already booked for this time slot");
+            }else {
+                return ResponseEntity.status(HttpStatus.CREATED)
+                        .body(convertToDTO(booking));
+            }
         } catch (CustomerIdNotFoundException e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body("Customer ID " + bookingDTO.customerId() + " not found.");
@@ -42,13 +50,13 @@ public class BookingController {
                     .body("Activity ID " + bookingDTO.activityId() + " not found.");
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("An error occurred while creating the booking.");
+                    .body("An error occurred while creating the booking: "+e.getMessage());
         }
     }
 
     @DeleteMapping("/{bookingId}")
     public ResponseEntity<Void> cancelBooking(@PathVariable Long bookingId) {
-        boolean result = bookingHandler.cancelBooking(bookingId);
+        boolean result = bookingCreator.cancelBooking(bookingId);
         if (result) {
             return ResponseEntity.ok().build();
         } else {
@@ -58,13 +66,11 @@ public class BookingController {
 
     @GetMapping
     public ResponseEntity<List<BookingDTO>> listAllBookings() {
-        List<Booking> bookings = bookingHandler.findAllBookings();
-        return ResponseEntity.ok(bookings.stream().map(this::convertToDTO).collect(Collectors.toList()));
+        List<Booking> bookings = bookingFinder.findAllBookings();
+        return ResponseEntity.ok(bookings.stream().map(this::convertToDTO).toList());
     }
 
-    // Additional endpoints to list bookings by customer or activity can be similar to listAllBookings()
-
     private BookingDTO convertToDTO(Booking booking) {
-        return new BookingDTO(booking.getId(), booking.getCustomer().getId(), booking.getActivity().getId());
+        return new BookingDTO(booking.getId(), booking.getCustomer().getId(), booking.getActivity().getId(), booking.getUsePoints());
     }
 }
